--- a/flask/app/static/css/languages.css
+++ b/flask/app/static/css/languages.css
@@ -21,7 +21,7 @@
 }
 
 body{
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
     background: var(--bg--color);
     margin: 0;
     padding: 0;
