add flash message in pending admin

--- a/flask/app/templates/pending_admin.html
+++ b/flask/app/templates/pending_admin.html
@@ -27,6 +27,14 @@
             <span class="center">Admin requests</span>
         </div>
     </div>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="notification is-danger">
+        {{ messages[0] }}
+    </div>
+    {% endif %}
+    {% endwith %}
+
     <div class="mainbox">
         {% if users %}
             <ul>
