--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -237,8 +237,6 @@
         document.querySelector('#topFive').textContent = (translations[lang].topFive);
         document.querySelector('#stock').textContent = (translations[lang].stock);
         document.querySelector('#qrScan').textContent = (translations[lang].qrScan);
-        document.querySelector('#manageAdmin').textContent = (translations[lang].manageAdmin);
-        document.querySelector('#contactAdmin').textContent = (translations[lang].contactAdmin);
     }
 
     function changeLanguageHaveData(lang) {
@@ -265,8 +263,14 @@
     {% else %}
         changeLanguageNoData(localStorage.getItem('lang'))
     {% endif %}
-
+    
     changeLanguage(localStorage.getItem('lang'));
+
+    {% if current_user.IsM_admin %}
+        document.querySelector('#manageAdmin').textContent = (translations[lang].manageAdmin);
+    {% else %}
+        document.querySelector('#contactAdmin').textContent = (translations[lang].contactAdmin);
+    {% endif %}
 
     function confirmAction() {
         if (localStorage.getItem('lang') === 'en' && window.confirm("Are you sure you want to Logout?")) {
