waiting page return to login css adjust

--- a/flask/app/templates/setting.html
+++ b/flask/app/templates/setting.html
@@ -68,7 +68,7 @@
             settings: "ตั้งค่า",
             greeting: "สวัสดี",
             languages: "ภาษา",
-            logout: "ล็อกเอาต์"
+            logout: "ออกจากระบบ"
         }
     };
 
