--- a/flask/app/static/css/loginA.css
+++ b/flask/app/static/css/loginA.css
@@ -210,3 +210,33 @@ body {
     color: #888;
     margin-top: 0;
 }
+
+.action-btn{
+    gap: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    margin-bottom: 10px;
+    border-radius: 40px;
+    border: 2px solid #888;
+    font-size: 3.5vw;
+    cursor: pointer;
+}
+
+.action-btn svg{
+    fill: var(--text--color);
+}
+
+.action-btn:hover{
+    background: #6993f5;
+}
+
+.action-btn span{
+    color: var(--text--color);
+    font-weight: 600;
+}
+
+#logout-bar svg{
+    fill: red;
+}
