fix translation in home page

--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -193,7 +193,7 @@
 
     const translations = {
         en: {
-            welcome: "Settings",
+            welcome: "Welcome",
             stats: "Statistics",
             hist: "History",
             addItem: "Add",
