--- a/flask/app/templates/adminlist.html
+++ b/flask/app/templates/adminlist.html
@@ -16,7 +16,9 @@
     </script>
     <div class="header">
         <div class="header-left">
-            <a href="{{ url_for('homepage') }}" class="back-btn"><i class="material-icons">arrow_back_ios</i></a>
+            <a href="{{ url_for('homepage') }}" class="back-btn">
+                <i class="material-icons">arrow_back_ios</i>
+            </a>
         </div>
         <h1 class="page-title">Admin List</h1>
         <div class="header-right">
