fixed cart ui and add confirm popup

--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -91,7 +91,7 @@
                             <input type="hidden" name="item_id" value="${it.itemID}">
                             <input type="hidden" name="action" value="delete">
                             <button type="button" class="delete-btn" onclick="showDeleteModal(${it.itemID})">
-                                <i class="material-icons">delete</i>
+                                <i class="material-icons" style="font-size: 2rem; color:white;">delete</i>
                             </button>
                         </form>
                     </div>
