fixed ui a little beach ichigo

--- a/flask/app/templates/adminlist.html
+++ b/flask/app/templates/adminlist.html
@@ -86,7 +86,7 @@
                                 <input type="hidden" name="user_id" value="{{ user.UserID }}">
                                 <input type="hidden" name="action" value="delete">
                                 <button type="submit" class="delete-btn" data-user-name="{{ user.Fname }} {{ user.Lname }}">
-                                    <i class="material-icons">delete_outline</i>
+                                    <i class="material-icons" style="font-size: 2rem; color:white;">delete</i>
                                 </button>
                             </form>
                         </div>
