--- a/flask/app/templates/notification.html
+++ b/flask/app/templates/notification.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="delete-action">
                         <button class="delete-btn">
-                            <i class="material-icons">delete</i>
+                            <i class="material-icons" style="font-size: 2rem; color:white;">delete</i>
                         </button>
                     </div>
                 </div>
