--- a/flask/app/templates/register.html
+++ b/flask/app/templates/register.html
@@ -23,7 +23,7 @@
                 <label for="profile_pic_input">
                     <div class="upload-circle">
                         <img id="image-preview" src="#" alt="Preview" style="display: none;" />
-                        <i id="upload-icon" class="material-icons">file_upload</i>
+                        <i id="upload-icon" class="material-icons">add_photo_alternate</i>
                     </div>
                 </label>
                 <input type="file" id="profile_pic_input" name="profile_pic" accept="image/*" style="display: none;">
